// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<KpiBlock /> should render with a negative variation value 1`] = `
.c2 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c3 {
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 600;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  position: absolute;
  right: 1rem;
  top: 1rem;
  color: hsl(6,79%,65%);
}

.c4 {
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 6.6rem;
  padding: 3rem 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    -100.00
     % 
    <div
      class="c2"
      data-testid="iconContainer"
      height="20"
      width="20"
    >
      <svg
        data-testid="iconSvg"
        height="20"
        style="display: block;"
        viewBox="0 0 512 512"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m 384.662 160 h -257.324 c -17.818 0 -26.741 21.543 -14.142 34.142 l 128.662 128.662 c 7.81 7.81 20.474 7.81 28.284 0 l 128.662 -128.662 c 12.6 -12.599 3.676 -34.142 -14.142 -34.142 z"
          data-testid="iconSvgPath"
          fill="hsl(6,79%,65%)"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c3"
  >
    value
  </div>
  <div
    class="c4"
  >
    title
  </div>
</div>
`;

exports[`<KpiBlock /> should render with a positive variation value 1`] = `
.c2 {
  display: inline-block;
  border-image-source: none;
  border-image-width: 0;
  padding: 0;
  font-size: 20;
  line-height: 20;
}

.c3 {
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 600;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.2rem;
  position: absolute;
  right: 1rem;
  top: 1rem;
  color: hsl(89,53%,52%);
}

.c4 {
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 6.6rem;
  padding: 3rem 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    +
    100.00
     % 
    <div
      class="c2"
      data-testid="iconContainer"
      height="20"
      width="20"
    >
      <svg
        data-testid="iconSvg"
        height="20"
        style="display: block;"
        viewBox="0 0 512 512"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m 384.662 352 h -257.324 c -17.818 0 -26.741 -21.543 -14.142 -34.142 l 128.662 -128.662 c 7.81 -7.81 20.474 -7.81 28.284 0 l 128.662 128.662 c 12.6 12.599 3.676 34.142 -14.142 34.142 z"
          data-testid="iconSvgPath"
          fill="hsl(89,53%,52%)"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </div>
  <div
    class="c3"
  >
    value
  </div>
  <div
    class="c4"
  >
    title
  </div>
</div>
`;

exports[`<KpiBlock /> should render without a problem 1`] = `
.c1 {
  color: hsl(213,17%,20%);
  font-size: 3rem;
  font-weight: 600;
}

.c2 {
  color: hsl(207,13%,45%);
  font-size: 1.4rem;
  margin-top: 0.5rem;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: hsl(0,100%,100%);
  border: 1px solid hsl(207,22%,90%);
  border-radius: 0.4rem;
  box-shadow: 0 1px 3px 0 rgba(0,0,0,0.04);
  box-sizing: content-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 6.6rem;
  padding: 3rem 1rem;
  position: relative;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    value
  </div>
  <div
    class="c2"
  >
    title
  </div>
</div>
`;
